force-app/main/default/objects/Contact/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>