force-app/main/default/objects/Contact/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefits managers | QUAL</fullName>
            </value>
            <value>
                <fullName>Technical Consultant | Ricardo Gregorio</fullName>
            </value>
            <value>
                <fullName>Technical Consultant | Raquel Almeida</fullName>
            </value>
            <value>
                <fullName>Here Among Us e-mail box</fullName>
            </value>
            <value>
                <fullName>Linkedin / Social Media</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>