force-app/main/default/objects/Contact/validationRules/Zip_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISBLANK(  MailingPostalCode ) ,REGEX( MailingPostalCode,&quot;[0-9]{5}-[0-9]{3}&quot;) ))</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Please Check the format of Zip Code.  Format Should be in nnnnn-nnn where n is any number 0 to 9</errorMessage>
</ValidationRule>